k8s/istio/hello-world-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - hello-world.apps.istio.aws.event-cloud.net
    port:
      name: http
      number: 80
      protocol: HTTP
