k8s/istio/default-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  generation: 1
  labels:
    app: istio-security
    chart: security-1.0.0
    heritage: Tiller
    maistra-version: 0.1.0
    release: istio-1.0.0
  name: default
  namespace: ""
  resourceVersion: ""
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/istio-system/destinationrules/default
  uid: ""
spec:
  host: '*.local'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
