k8s/istio/hello-world-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-world
spec:
  host: hello-world-istio
  subsets:
  - name: production
    labels:
      env: production
  - name: canary
    labels:
      env: canary
