k8s/istio/hello-world-virtual-service-init.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  gateways:
  - hello-world-gateway
  hosts:
  - hello-world-istio.apps.istio.aws.event-cloud.net
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-world-istio
        port:
          number: 8080
        subset: production
      weight: 100
    - destination:
        host: hello-world-istio
        port:
          number: 8080
        subset: canary 
      weight: 0
    retries:
      attempts: 7
      perTryTimeout: 10s
